<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">freeCard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	
    <string name="main_page">首页</string>
    <string name="card_bag">卡包</string>
    <string name="discovery">发现</string>
    <string name="mine">我的</string>
    <string name="user_msg">用户消息</string>
    <string name="system_msg">系统消息</string>
    <string name="seller_msg">商家消息</string>
    <string name="report">举报</string>
    <string name="coupon">优惠券</string>
    <string name="total">全部</string>
    <string name="often">常用</string>
    <string name="collection">收藏</string>
    <string name="unused">未使用</string>
    <string name="used">已使用</string>
    <string name="out_dated">已过期</string>
    <string name="entertainment">休闲娱乐</string>
    <string name="beautiful_lady">丽人养成</string>
    <string name="life_service">生活服务</string>
    <string name="health">健身养生</string>
    <string name="car_service">汽车服务</string>
    <string name="food">美食诱惑</string>
    <string name="baby_care">母婴亲子</string>
    <string name="more">更多</string>
    
</resources>
