<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    <include layout="@layout/text_title_no_back"/>
    <RadioGroup 
	    android:id="@+id/rg_card_bag"
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:orientation="horizontal"
	    android:background="@color/white"
	    >
	    <RadioButton 
	        android:id="@+id/card_tab"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:paddingLeft="0dp"
	        android:layout_weight="1"
	        android:button="@null"
	        android:text="@string/card_bag"
	        android:textColor="@color/tab_color_selector"
	        android:checked="true"
	        />
	    <RadioButton 
	        android:id="@+id/coupon_tab"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:paddingLeft="0dp"
	        android:layout_weight="1"
	        android:textColor="@color/tab_color_selector"
	        android:text="@string/coupon"
	        android:button="@null"
	        />
	</RadioGroup>
	<RadioGroup 
	    android:id="@+id/rg_card_sub"
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:orientation="horizontal"
	    android:background="@color/white"
	    >
	    <RadioButton 
	        android:id="@+id/card_all_tab"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:paddingLeft="0dp"
	        android:layout_weight="1"
	        android:button="@null"
	        android:text="@string/total"
	        android:textColor="@color/tab_color_selector"
	        android:checked="true"
	        />
	    <RadioButton 
	        android:id="@+id/card_often_tab"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:paddingLeft="0dp"
	        android:layout_weight="1"
	        android:textColor="@color/tab_color_selector"
	        android:text="@string/often"
	        android:button="@null"
	        />
	    <RadioButton 
	        android:id="@+id/card_collection_tab"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:paddingLeft="0dp"
	        android:layout_weight="1"
	        android:textColor="@color/tab_color_selector"
	        android:text="@string/collection"
	        android:button="@null"
	        />
	</RadioGroup>
	<RadioGroup 
	    android:id="@+id/rg_coupon_sub"
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:orientation="horizontal"
	    android:background="@color/white"
	    android:visibility="gone"
	    >
	    <RadioButton 
	        android:id="@+id/coupon_unused_tab"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:paddingLeft="0dp"
	        android:layout_weight="1"
	        android:button="@null"
	        android:text="@string/unused"
	        android:textColor="@color/tab_color_selector"
	        android:checked="true"
	        />
	    <RadioButton 
	        android:id="@+id/coupon_used_tab"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:paddingLeft="0dp"
	        android:layout_weight="1"
	        android:textColor="@color/tab_color_selector"
	        android:text="@string/used"
	        android:button="@null"
	        />
	    <RadioButton 
	        android:id="@+id/coupon_outdated_tab"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:paddingLeft="0dp"
	        android:layout_weight="1"
	        android:textColor="@color/tab_color_selector"
	        android:text="@string/out_dated"
	        android:button="@null"
	        />
	</RadioGroup>
	<ListView 
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="#00000000"
        android:fadingEdgeLength="0dp"
        android:scrollbars="none"
        ></ListView>

</LinearLayout>
