<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<FrameLayout 
	    android:id="@+id/container"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_above="@+id/line"
	    ></FrameLayout>
	<View 
	    android:id="@+id/line"
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@color/gray"
	    android:layout_above="@+id/tab_bottom"
	    />
	<RadioGroup 
	    android:id="@+id/tab_bottom"
	    android:layout_width="match_parent"
	    android:layout_height="60dp"
	    android:layout_alignParentBottom="true"
	    android:orientation="horizontal"
	    android:background="@color/white"
	    android:paddingTop="7dp"
	    android:paddingBottom="7dp"
	    >
	    <RadioButton 
	        android:id="@+id/main_tab"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:paddingLeft="0dp"
	        android:layout_weight="1"
	        android:button="@null"
	        android:text="@string/main_page"
	        android:textColor="@color/tab_color_selector"
	        android:textSize="@dimen/font_size_12"
	        android:checked="true"
	        android:drawableTop="@drawable/shop_btn_selector"
	        />
	    <RadioButton 
	        android:id="@+id/cardbag_tab"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:paddingLeft="0dp"
	        android:layout_weight="1"
	        android:textColor="@color/tab_color_selector"
	        android:text="@string/card_bag"
	        android:textSize="@dimen/font_size_12"
	        android:drawableTop="@drawable/card_btn_selector"
	        android:button="@null"
	        />
	    <RadioButton 
	        android:id="@+id/discovery_tab"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:paddingLeft="0dp"
	        android:layout_weight="1"
	        android:text="@string/discovery"
	        android:textSize="@dimen/font_size_12"
	        android:textColor="@color/tab_color_selector"
	        android:button="@null"
	        android:drawableTop="@drawable/market_btn_selector"
	        />
	    <RadioButton 
	        android:id="@+id/mine_tab"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:paddingLeft="0dp"
	        android:layout_weight="1"
	        android:text="@string/mine"
	        android:textSize="@dimen/font_size_12"
	        android:textColor="@color/tab_color_selector"
	        android:button="@null"
	        android:drawableTop="@drawable/function_btn_selector"
	        />
	</RadioGroup>
</RelativeLayout>
