<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">
    <include layout="@layout/text_title"/>
	<RadioGroup 
	    android:id="@+id/msg_tab_group"
	    android:layout_width="match_parent"
	    android:layout_height="40dp"
	    android:orientation="horizontal"
	    android:background="@color/white"
	    >
	    <RadioButton 
	        android:id="@+id/user_tab"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:layout_weight="1"
	        android:button="@null"
	        android:text="@string/user_msg"
	        android:textColor="@color/tab_color_selector"
	        android:checked="true"
	        />
	    <RadioButton 
	        android:id="@+id/system_tab"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:layout_weight="1"
	        android:textColor="@color/tab_color_selector"
	        android:text="@string/system_msg"
	        android:button="@null"
	        />
	    <RadioButton 
	        android:id="@+id/seller_tab"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:layout_weight="1"
	        android:text="@string/seller_msg"
	        android:textColor="@color/tab_color_selector"
	        android:button="@null"
	        />
	</RadioGroup>
	<ListView 
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="#00000000"
        android:fadingEdgeLength="0dp"
        android:scrollbars="none"
        ></ListView>
	<TextView 
	    android:id="@+id/tv_empty_text"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:text="当前没有消息"
	    android:textSize="@dimen/font_size_18"
	    />
</LinearLayout>
