<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical" >

    <include layout="@layout/text_title_no_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include layout="@layout/ads_view_pager" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_short" >

                <TextView
                    android:id="@+id/tv_category_01"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/entertainment"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_14" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/tv_category_02"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/beautiful_lady"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_14" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/tv_category_03"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/life_service"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_14" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/tv_category_04"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/health"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_14" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height_short" >

                <TextView
                    android:id="@+id/tv_category_05"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/car_service"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_14" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/tv_category_06"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/food"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_14" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/tv_category_07"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/baby_care"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_14" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="6dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/tv_category_08"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/more"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_size_14" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:background="@color/white"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="离你最近"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/font_size_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:text="@string/more"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/font_size_14" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/grid_height" >

                <FrameLayout
                    android:id="@+id/layout_near_grid01"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/iv_near_grid01"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_near_grid01"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:background="@color/translucent"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="大洋会员卡"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_14" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/layout_near_grid02"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/iv_near_grid02"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_near_grid02"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:background="@color/translucent"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="新百会员卡"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_14" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/grid_height" >

                <FrameLayout
                    android:id="@+id/layout_near_grid03"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/iv_near_grid03"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_near_grid03"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:background="@color/translucent"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="大洋会员卡"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_14" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/layout_near_grid04"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/iv_near_grid04"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_near_grid04"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:background="@color/translucent"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="新百会员卡"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_14" />
                </FrameLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="猜你喜欢"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/font_size_14" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:text="@string/more"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/font_size_14" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/grid_height" >

                <FrameLayout
                    android:id="@+id/layout_recommend_grid01"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/iv_recommend_grid01"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_recommend_grid01"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:background="@color/translucent"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="大洋会员卡"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_14" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/layout_recommend_grid02"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/iv_recommend_grid02"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_recommend_grid02"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:background="@color/translucent"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="新百会员卡"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_14" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/grid_height" >

                <FrameLayout
                    android:id="@+id/layout_recommend_grid03"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/iv_recommend_grid03"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_recommend_grid03"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:background="@color/translucent"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="大洋会员卡"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_14" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/layout_recommend_grid04"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" >

                    <ImageView
                        android:id="@+id/iv_recommend_grid04"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_launcher" />

                    <TextView
                        android:id="@+id/tv_recommend_grid04"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="bottom"
                        android:background="@color/translucent"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="新百会员卡"
                        android:textColor="@color/white"
                        android:textSize="@dimen/font_size_14" />
                </FrameLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>